[gd_scene load_steps=13 format=3 uid="uid://cyg6d0aujqqun"]

[ext_resource type="Script" path="res://ui/game_over_ui.gd" id="1_2wwjl"]
[ext_resource type="Texture2D" uid="uid://ct8em0c4su86y" path="res://addons/Tiny Swords/UI/Ribbons/Ribbon_Red_3Slides.png" id="1_m34mx"]
[ext_resource type="Texture2D" uid="uid://reod0yspsytg" path="res://addons/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="2_ed0k8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r6kly"]
texture = ExtResource("1_m34mx")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2
region_rect = Rect2(0, 0, 192, 64)

[sub_resource type="SystemFont" id="SystemFont_7qr4q"]
font_names = PackedStringArray("Elephant")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_vkemf"]
font = SubResource("SystemFont_7qr4q")
font_size = 40
font_color = Color(0.360784, 0, 0.164706, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lx3ny"]
texture = ExtResource("2_ed0k8")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 40.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 120)

[sub_resource type="SystemFont" id="SystemFont_f5o68"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_tcscc"]
font = SubResource("SystemFont_f5o68")
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_8kg21"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.713726)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottomPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(352, 363)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TopPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(382.5, 24)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TopPanel:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.139626]
}

[sub_resource type="Animation" id="Animation_t6a4w"]
resource_name = "default"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.690196)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottomPanel:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.3, 2),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Vector2(352, 667), Vector2(352, 363)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TopPanel:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8, 2),
"transitions": PackedFloat32Array(0.106066, 1),
"update": 0,
"values": [Vector2(383, -147), Vector2(382.5, 24)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TopPanel:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.139626, -0.139626, 0.139626, -0.139626, 0.139626, -0.139626, 0.139626, -0.139626, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dy7a0"]
_data = {
"RESET": SubResource("Animation_8kg21"),
"default": SubResource("Animation_t6a4w")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_2wwjl")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.713726)

[node name="TopPanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 382.5
offset_top = 24.0
offset_right = 769.502
offset_bottom = 137.0
grow_horizontal = 2
rotation = 0.139626
pivot_offset = Vector2(195, 45)
theme_override_styles/panel = SubResource("StyleBoxTexture_r6kly")

[node name="Label" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.5
offset_top = -37.5
offset_right = 145.5
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_vkemf")

[node name="BottomPanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 352.0
offset_top = 363.0
offset_right = 800.0
offset_bottom = 543.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_lx3ny")

[node name="CenterContainer" type="CenterContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.0
offset_top = -55.0
offset_right = 146.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResultsGridContainer" type="GridContainer" parent="BottomPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 2

[node name="TitleLabel1" type="Label" parent="BottomPanel/CenterContainer/ResultsGridContainer"]
layout_mode = 2
text = "Time Survived:"
label_settings = SubResource("LabelSettings_tcscc")

[node name="TimeLabel" type="Label" parent="BottomPanel/CenterContainer/ResultsGridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "18:11"
label_settings = SubResource("LabelSettings_tcscc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleLabel2" type="Label" parent="BottomPanel/CenterContainer/ResultsGridContainer"]
layout_mode = 2
text = "Enemies Defeated:"
label_settings = SubResource("LabelSettings_tcscc")

[node name="EnemiesLabel" type="Label" parent="BottomPanel/CenterContainer/ResultsGridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "232"
label_settings = SubResource("LabelSettings_tcscc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dy7a0")
}
autoplay = "default"
